--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div id="formTriggerOpen" class="container-maintenance--contact">
-        <h3 class="maintenance--contact-h3">CONTACT</h3>
+        <h3 class="maintenance--contact-h3">MESSAGE ME</h3>
         <!-- hamburger menu -->
         <svg id="burgerOpen" class="maintenance--svg-close" width="14" height="14" viewBox="0 0 14 14" fill="inherit" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M14 7.5H0V6.5H14V7.5Z" fill="inherit"/>
@@ -67,15 +67,15 @@
             </div>
           </div>
           <div class="maintenance--input">
-            <input class="" type="text" id="name" name="name" placeholder="NAME *" user-scalable="no" required>
+            <input class="" type="text" id="name" name="name" placeholder="Name *" user-scalable="no" required>
             <label for="name">NAME</label>
           </div>
           <div class="maintenance--input">
-            <input class="" type="email" id="email" name="email" placeholder="EMAIL ADDRESS *" user-scalable="no" equired>
+            <input class="" type="email" id="email" name="email" placeholder="Email Address *" user-scalable="no" required>
             <label for="email">EMAIL</label>
           </div>
           <div class="maintenance--input">
-            <textarea id="message" class="" name="message" placeholder="GET IN TOUCH *" user-scalable="no" required></textarea>
+            <textarea id="message" class="" name="message" placeholder="Say hello. Let's work together. *" user-scalable="no" required></textarea>
             <label for="message" class="maintenance--input--message">MESSAGE</label>
           </div>
           <div class="maintenance--input">
@@ -89,12 +89,33 @@
         </div>
     </section>
     <footer class="container--footer">
-      <copyright class="container-maintenance--copyright">
-        <p class="maintenance--copyright-p">© Copyright 2023 Chris Edwards Design</p>
-        <p class="maintenance--message">* Website under maintenance</p>
-      </copyright>
-      <div class="maintenance--version-container">
-        <p class="maintenance--version-history">CDAUX V1.0</p>
+      <div class="footer--col grid-col-1">
+        <ul class="container-maintenance--ul">
+          <li class="footer--info-li uppercase">phone</li>
+          <li class="footer--info-li"><a title="Mobile Contact" href="tel:07506583276">+44 (0) 7506-583-276</a></li>
+        </ul>
+        <ul class="container-maintenance--ul">
+          <li class="footer--info-li uppercase">email</li>
+          <li class="footer--info-li"><a href="mailto:chris@chrisedwardsdesign.com" title="Email">chris@chrisedwardsdesign.com</a></li>
+        </ul>
+      </div>
+      <div class="footer--col grid-col-2">
+        <ul class="container-maintenance--ul">
+          <li class="footer--info-li uppercase">LINKEDIN</li>
+          <li class="footer--info-li"><a href="https://www.linkedin.com/in/chris-edwards-b97488276" title="LinkedIn External Link" target="_blank">/chris-edwards-b97488276</a></li>
+        </ul>
+        <ul class="container-maintenance--ul">
+          <li class="footer--info-li uppercase">RESUME</li>
+          <li class="footer--info-li"><a href="#" title="Download attached file" target="_blank">Download CV / Resume</a></li>
+        </ul>
+        <!-- <ul class="container-maintenance--ul">
+          <li class="footer--info-li uppercase">instagram</li>
+          <li class="footer--info-li"><a href="/chrisedwardsdesign" title="LinkedIn External Link" target="_blank">/chrisedwardsdesign</a></li>
+        </ul> -->
+      </div>
+      <div class="maintenance--version-container grid-col-4">
+        <p class="maintenance--version-history uppercase">CDAUX V1.0</p>
+        <p class="footer--info-li">© Copyright 2023 Chris Edwards Design</p>
       </div>
     </footer>
 </body>
