--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
-    <title>© Copyright 2023 Chris Edwards / Design Animation UX Code</title>
+    <title>ChrisEdwardsDesign / Design Animation UX Code © Copyright 2023</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/cdev-grid-boiler-plate.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
