--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         </ul>
         <ul class="container-maintenance--ul">
           <li class="footer--info-li uppercase">RESUME</li>
-          <li class="footer--info-li"><a href="#" title="Download attached file" target="_blank">Download CV / Resume</a></li>
+<!--           <li class="footer--info-li"><a href="#" title="Download attached file" target="_blank">Download CV / Resume</a></li> -->
+            <li class="footer--info-li"><a href="#" title="Download attached file">Download CV / Resume</a></li>
         </ul>
         <!-- <ul class="container-maintenance--ul">
           <li class="footer--info-li uppercase">instagram</li>
