--- a/index.html
+++ b/index.html
@@ -88,17 +88,11 @@
     <div id="contGame" class="maintenance--game-container">
       <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
     </div>
-    <section id="contParent" class="container-maintenance ">
-        <div class="container-countdown--desk">
-          <div id="countdownTimerDesk" class="maintenance--time"></div>
-          <h2 class="maintenance--title-h2">/ LIVE</h2>
-        </div>
-    </section>
     <!-- work -->
     <section class="maintenance--announcement">
       <div class="container-countdown--mob">
         <h2 class="maintenance--title-h2">LIVE:</h2>
-        <div id="countdownTimerMob" class="maintenance--time"></div>
+        <div id="countdownTimerMain" class="maintenance--time"></div>
       </div>
     </section>
     <section class="section--two-column">
