--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <title>© Copyright 2023 Chris Edwards / Design Animation UX Code</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://use.typekit.net/wod0krg.css">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <script src="maintenance-game.js"></script>
 </head>
 <body class="body-content dark-mode">
@@ -85,9 +86,10 @@
       </form> 
     </div>  
     <section id="formOverlay" class="maintenance--form-overlay form-hide"></section>
-    <div id="contGame" class="maintenance--game-container">
+    <!-- game -->
+    <!-- <div id="contGame" class="maintenance--game-container">
       <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
-    </div>
+    </div> -->
     <!-- work -->
     <section class="maintenance--announcement">
       <div class="container-countdown--mob">
@@ -98,12 +100,31 @@
     <section class="section--two-column">
       <div class="two-column--content">
         <p class="opener">
-          Manchester-based digital designer specialising in digital and graphic design, animation, and UX. With experience in HTML, CSS, and JavaScript. With 5+ years of varied industry experience, I excel at creating functional and impactful designs that prioritise clarity and effectiveness. Let's work together to bring your vision to life. Feel free to explore my portfolio and reach out for freelance opportunities.      </div>
-    </section>
+          Manchester-based digital designer specialising in digital and graphic design, animation, and UX. With a good understanding of HTML, CSS, and JavaScript. I create functional and impactful designs that prioritise clarity and effectiveness. Let's work together to bring your vision to life. Feel free to explore my portfolio and reach out for freelance opportunities.
+        </p>
+      </div>
+      <div class="logotype--svg-container">
+        <!-- <svg class="logotype--svg" width="auto" height="auto" viewBox="0 0 685 164" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 82.35C0 35.67 29.06 0 75.52 0C114.27 0 137.17 23.12 140.47 53.06H108.76C105.9 37.21 94.01 26.86 75.51 26.86C46.45 26.86 32.57 51.08 32.57 82.35C32.57 113.62 49.3 137.62 75.73 137.62C94.45 137.62 107.66 126.39 109.64 109.88H140.91C140.03 123.75 134.08 137.18 123.52 147.09C112.73 157.22 97.54 163.82 75.74 163.82C31.49 163.82 0 129.69 0 82.35Z" fill="inherit"/>
+          <path d="M152.67 3.07812H214.1C256.15 3.07812 283.24 36.9881 283.24 83.4481C283.24 108.988 274.65 131.448 258.14 145.318C246.47 155.008 231.28 160.508 211.46 160.508H152.67V3.07812ZM209.26 132.988C239.21 132.988 250.88 114.708 250.88 83.4481C250.88 52.1881 237.23 30.3881 210.15 30.3881H184.61V132.998H209.27L209.26 132.988Z" fill="inherit"/>
+          <path d="M330.51 3.07812H363.54L419.03 160.508H385.78L375.21 127.038H318.4L308.05 160.508H275.68L330.51 3.07812ZM325.89 102.598H367.51L353.42 57.2381C350.78 48.8681 347.03 33.0181 347.03 33.0181H346.59C346.59 33.0181 342.63 48.8681 339.98 57.2381L325.89 102.598Z" fill="inherit"/>
+          <path d="M418.72 109.868V3.07812H450.65V109.868C450.65 126.158 458.8 137.608 480.15 137.608C500.41 137.608 509.87 125.718 509.87 109.428V3.07812H541.8V109.868C541.8 143.558 521.1 163.158 480.81 163.158C440.52 163.158 418.72 143.998 418.72 109.868Z" fill="inherit"/>
+          <path d="M596.61 78.1681L549.49 3.07812H585.38L614.44 52.8381H614.88L643.94 3.07812H678.73L632.49 77.9381L684.67 160.508H647.46L615.31 103.038H614.87L582.28 160.508H545.73L596.59 78.1581L596.61 78.1681Z" fill="inherit"/>
+        </svg> -->
+        <svg class="logotype--svg" width="688" height="164" viewBox="0 0 688 164" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 82.4203C0 35.7403 29.06 0.0703125 75.52 0.0703125C114.27 0.0703125 137.17 23.1903 140.47 53.1303H108.76C105.9 37.2803 94.01 26.9303 75.51 26.9303C46.45 26.9303 32.57 51.1503 32.57 82.4203C32.57 113.69 49.3 137.69 75.73 137.69C94.45 137.69 107.66 126.46 109.64 109.95H140.91C140.03 123.82 134.08 137.25 123.52 147.16C112.73 157.29 97.54 163.89 75.74 163.89C31.49 163.89 0 129.76 0 82.4203Z" fill="inherit"/>
+          <path d="M149.37 3.16016H210.8C252.85 3.16016 279.94 37.0702 279.94 83.5302C279.94 109.07 271.35 131.53 254.84 145.4C243.17 155.09 227.98 160.59 208.16 160.59H149.37V3.16016ZM205.96 133.07C235.91 133.07 247.58 114.79 247.58 83.5302C247.58 52.2702 233.93 30.4702 206.85 30.4702H181.31V133.08H205.97L205.96 133.07Z" fill="inherit"/>
+          <path d="M323.91 3.16016H356.94L412.43 160.59H379.18L368.61 127.12H311.8L301.45 160.59H269.08L323.91 3.16016ZM319.29 102.68H360.91L346.82 57.3202C344.18 48.9502 340.43 33.1002 340.43 33.1002H339.99C339.99 33.1002 336.03 48.9502 333.38 57.3202L319.29 102.68Z" fill="inherit"/>
+          <path d="M408.81 109.95V3.16016H440.74V109.95C440.74 126.24 448.89 137.69 470.24 137.69C490.5 137.69 499.96 125.8 499.96 109.51V3.16016H531.89V109.95C531.89 143.64 511.19 163.24 470.9 163.24C430.61 163.24 408.81 144.08 408.81 109.95Z" fill="inherit"/>
+          <path d="M583.39 78.2402L536.28 3.16016H572.17L601.23 52.9202H601.67L630.73 3.16016H665.52L619.28 78.0201L671.46 160.59H634.25L602.1 103.12H601.66L569.07 160.59H532.52L583.38 78.2402H583.39Z" fill="inherit"/>
+          <path d="M667.49 10.35C667.49 4.4 671.98 0 677.63 0C683.28 0 687.77 4.41 687.77 10.35C687.77 16.29 683.28 20.7 677.63 20.7C671.98 20.7 667.49 16.34 667.49 10.35ZM686.14 10.35C686.14 5.17 682.59 1.37 677.63 1.37C672.67 1.37 669.12 5.18 669.12 10.35C669.12 15.52 672.67 19.34 677.63 19.34C682.59 19.34 686.14 15.57 686.14 10.35ZM673.65 4.66H678.7C680.75 4.66 682.12 5.9 682.12 7.74C682.12 9.02 681.48 10.01 680.07 10.39V10.43C681.18 10.73 681.7 11.41 681.78 12.83C681.95 14.46 681.95 15.48 682.25 15.65V15.73H680.41C680.11 15.6 680.03 14.53 679.94 13.21C679.9 11.84 679.21 11.11 677.76 11.11H675.54V15.73H673.66V4.66H673.65ZM678.27 9.67C679.6 9.67 680.24 8.99 680.24 7.96C680.24 6.93 679.64 6.21 678.31 6.21H675.53V9.68H678.27V9.67Z" fill="inherit"/>
+        </svg>      
+      </div>
+      </section>
      <!-- footer -->
     <footer class="container--footer">
       <div class="footer--content">
-        <div class="footer--col grid-col-1">
+        <div class="footer--col-1">
           <ul id="formTriggerThree" class="container-maintenance--ul cursor-pointer">
             <li class="footer--info-li uppercase">CONTACT</li>
             <li class="footer--info-li">Send me a message</li>
@@ -113,7 +134,7 @@
             <li class="footer--info-li"><a href="mailto:chris@chrisedwardsdesign.com" title="Email">chris@chrisedwardsdesign.com</a></li>
           </ul>
         </div>
-        <div class="footer--col grid-col-2">
+        <div class="footer--col-2">
           <ul class="container-maintenance--ul">
             <li class="footer--info-li uppercase">LINKEDIN</li>
             <li class="footer--info-li"><a href="https://www.linkedin.com/in/chris-edwards-b97488276" title="LinkedIn External Link" target="_blank">/chris-edwards-b97488276</a></li>
@@ -124,8 +145,9 @@
           </ul>
         </div>
         <p class="footer--info-li--copyright-desk">© Copyright 2023 Chris Edwards Design</p>
+        <p class="maintenance--version-history">* Under maintenance</p>
         <div class="maintenance--version-container">
-          <p class="maintenance--version-history grid-col-3">Website under maintenance</p>
+          <!-- <p class="maintenance--version-history">Website under maintenance</p> -->
           <p class="footer--info-li--copyright-mob">© Copyright 2023 Chris Edwards Design</p>
         </div>
       </div>
