--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <section class="section--two-column--container">
             <div class="two-column--content">
               <div class="two-column--content-text">
-                <p class="opener">
+                <p class="intro-text">
                   I'm a Manchester-based digital designer specialising in web design, animation, and UX. With a strong foundation in HTML, CSS, JavaScript, and 3D modeling, I create impactful designs that prioritize clarity and immersive experiences. Let's bring your vision to life in the digital realm. Check out my portfolio and reach out for freelance opportunities.
                 </p>
               </div>
