--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="two-column--content">
               <div class="two-column--content-text">
                 <p class="intro-text">
-                  I'm a Manchester-based digital designer specialising in web design, animation, and UX. With a strong foundation in HTML, CSS, JavaScript, and 3D modeling, I create impactful designs that prioritize clarity and immersive experiences. Let's bring your vision to life in the digital realm. Check out my portfolio and reach out for freelance opportunities.
+                  Manchester-based digital designer specialising in web design, animation, and UX. With a strong foundation in HTML, CSS, JavaScript, and 3D modeling, I create impactful designs that prioritize clarity and immersive experiences. Check out my portfolio and reach out for freelance opportunities.
                 </p>
               </div>
               <div class="logotype--svg-container">
