--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="maintenance-game.js"></script>
 </head>
 <body class="body-content dark-mode">
-  <header id="header--container" class="header--container">
+<!--   <header id="header--container" class="header--container">
     <!-- nav -->
     <nav id="navBar" class="container--nav">
       <h1 class="maintenance--logo">CHRIS EDWARDS</h1>
@@ -155,6 +155,6 @@
           </footer>
         </div>
       </div>
-    </main>
+    </main> -->
 </body>
 </html>
