--- a/index.html
+++ b/index.html
@@ -7,13 +7,244 @@
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
-    <title>© Copyright 2023 Chris Edwards / Design Animation UX Code</title>
+    <meta name="description" content="Branding / Web Design / Graphic Design / Objects / Digital / Social Media">
+    <link rel="canonical" href="https://www.chrisedwardsdesign.com/">
+    <title>ChrisEdwardsDesign - Digital Designer</title>
+    <meta property="og:locale" content="en_UK">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Chris Edwards Design - Digital Designer">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
     <link rel="stylesheet" href="https://use.typekit.net/wod0krg.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="license" href="/license.txt">
     <script src="maintenance-game.js"></script>
 </head>
 <body class="body-content dark-mode">
+  <header id="header--container" class="header--container">
+    <!-- nav -->
+    <nav id="navBar" class="container--nav">
+    <div class="nav--logo-container cursor-pointer ">  
+      <!-- <a href="https://chrisedwardsdesign.com/" title="Homepage"> -->
+      <a href="#" title="Homepage">
+        <h2 class="nav--logo">CHRIS EDWARDS</h2>
+      </a>
+    </div>
+    <div class="nav--title-container cursor-pointer ">
+      <li class="live-box"></li>  
+      <a href="#" title="Homepage">
+        <h2 class="nav--title">DESIGN</h2>
+      </a>
+    </div>
+    <ul class="timer-container cursor-pointer">
+      <!-- <li class="live-bullet"></li>   -->
+      <li class="countdown--title-desk">LIVE:</li>
+      <li id="countdownTimerMobile" class="maintenance--time"></li>
+    </ul>
+    <ul class="nav--link-group--desk cursor-pointer">
+      <li>
+        <a href="#" title="Homepage">
+          <h2 class="nav--link">DESIGN</h2>
+        </a> 
+      </li>
+      <li>
+        <a href="#" title="Animation">
+          <h2 class="nav--link">ANIMATION</h2>
+        </a>
+      </li>
+      <li>
+        <a href="#" title="UX">
+          <h2 class="nav--link">UX</h2>
+        </a>
+      </li>
+      <li>
+        <a href="#" title="Code">
+          <h2 class="nav--link">CODE</h2>
+        </a>
+      </li>
+    </ul>
+      <!-- <h2 class="maintenance--title">DESIGN ANIMATION CODE</h2> -->
+    <div class="content--right">
+      <button id="toggleBtn" class="container--mode-switch">
+        <div class="mode-switch-btn--container">
+          <div id="ledRight" class="mode-switch--btn"></div>
+          <div id="ledLeft" class="mode-switch--btn mode-switch--btn--visible"></div>
+        </div>
+      <div id="darkText" class="container-mode-switch--btn-text">
+        <h4 label="light mode" class="mode-switch--btn-text">DARK</h4>
+      </div>
+      <div id="lightText" class="container-mode-switch--btn-text toggle-text-switch">
+        <h4 label="light mode" class="mode-switch--btn-text">LIGHT</h4>
+      </div>
+      </button>
+      <div id="formTriggerOpen" class="container-maintenance--contact">
+        <h3 class="maintenance--contact-h3">MENU</h3>
+        <!-- hamburger menu -->
+        <svg id="burgerOpen" class="maintenance--svg-close" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
+        </svg>        
+        <svg id="burgerClose" class="maintenance--svg-close-2 svg-hide" width="18" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 1.44922H16" stroke="inherit"/>
+        </svg>
+      </div>
+    </div>
+    </nav>
+  </header>
+  <div class="maintenance--form-holder form-slide-left" id="formPosition">
+    <form class="maintenance-container--form" action="https://formspree.io/f/mzbqwbol" method="POST">
+      <div id="maintenance--svg-trigger-1" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
+        <div class="maintenance--marquee-container">
+          <h3 id="formTitleMarquee" class="maintenance--form-title-h3 maintenance--uppercase maintenance--form-marque">SITE UNDER MAINTENANCE ALL ENQUIRIES: chris@chrisedwardsdesign.com</h3>
+        </div>
+        <div id="formTriggerTwo" class="maintenance--marquee-svg-container">
+          <svg id="closeMinus"class="maintenance--svg-close-2 svg-hide" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17 17L1 1" stroke="inherit"/>
+            <path d="M1 17L17 1" stroke="inherit"/>
+          </svg>
+          <svg id="minusClose" class="maintenance--svg-close-minus" width="16" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0 1.44922H16" stroke="inherit"/>
+          </svg>
+        </div>
+      </div>
+      <div class="maintenance--input">
+        <input class="placeholder-color" type="text" id="name" name="name" placeholder="Name*" user-scalable="no" required>
+        <label for="name">NAME</label>
+      </div>
+      <div class="maintenance--input">
+        <input class="placeholder-color" type="email" id="email" name="email" placeholder="Email Address*" user-scalable="no" required>
+        <label for="email">EMAIL</label>
+      </div>
+      <div class="maintenance--input">
+        <textarea id="message" class="placeholder-color" name="message" placeholder="Say hello. Let's work together.*" user-scalable="no" required></textarea>
+        <label for="message" class="maintenance--input--message">MESSAGE</label>
+      </div>
+      <div class="maintenance--input">
+        <button id="maintenance--form-submit" class="maintenance--uppercase" user-scalable="no" type="submit">SUBMIT</button>
+      </div>
+    </form> 
+  </div>  
+  <section id="formOverlay" class="maintenance--form-overlay form-hide"></section>
+  <div id="page-wrapper" class="page-wrapper">
+    <main id="contMain" class="main--wrapper">
+      <div class="main-wrapper">
+        <div class="inner-wrapper">
+          <!-- game -->
+          <!-- <div id="contGame" class="maintenance--game-container">
+            <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
+          </div> -->
+          <!-- work -->
+          <section class="nav--link-group-container--mob">
+            <ul class="nav--link-group--mob cursor-pointer">
+              <li>
+                <a href="#" title="Homepage">
+                  <h2 class="nav--link">DESIGN</h2>
+                </a> 
+              </li>
+              <li>
+                <a href="#" title="Animation">
+                  <h2 class="nav--link">ANIMATION</h2>
+                </a>
+              </li>
+              <li>
+                <a href="#" title="UX">
+                  <h2 class="nav--link">UX</h2>
+                </a>
+              </li>
+              <li>
+                <a href="#" title="Code">
+                  <h2 class="nav--link">CODE</h2>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <!-- timer temp -->
+          <section class="maintenance--announcement--mob">
+            <ul class="container-countdown--mob">
+              <li class="live-bullet"></li>
+              <li class="maintenance--title-h2">LIVE:</li>
+              <li id="countdownTimerDesktop" class="maintenance--time"></li>
+            </ul>
+          </section>
+          <section id="two-column--container" class="two-column--container">
+            <div class="two-column--content">
+              <div class="two-column--content-text">
+                <p class="intro-text">
+                  Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript, Shopify liquid as well as 3D modeling packages Cinema 4D and blender. Check out my portfolio and reach out for freelance opportunities.
+                </p>
+              </div>
+              <div class="container--media-home">
+                <div class="container--video">
+                  <img id="thumbnail" class="video-hero-thumbnail" src="images/text.jpg" alt="Video Thumbnail" onclick="playVideo()">
+                  <video id="video" class="video-content lazyload" controls data-src="path/to/your/video.mp4" type="video/mp4"></video>
+                </div>
+                <p class="meta-text--video uppercase">
+                  Meta data / video
+                </p>
+              </div>
+              <div class="logotype--svg-container">
+                <div class="logotype--svg-inner">
+                  <svg id="logotypeSvgWidthTop" class="logotype--svg-top" width="309" height="73" viewBox="0 0 309 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0.950684 71.3984V60.7984H10.3507V11.9984H0.950684V1.39844H29.4507C38.7807 1.39844 45.9207 3.76844 50.8507 8.49844C55.7807 13.2284 58.2507 20.3284 58.2507 29.7984V42.9984C58.2507 52.4684 55.7807 59.5684 50.8507 64.2984C45.9207 69.0284 38.7807 71.3984 29.4507 71.3984H0.950684ZM22.3507 60.4984H29.5507C35.2207 60.4984 39.4207 59.0384 42.1507 56.0984C44.8807 53.1684 46.2507 48.9284 46.2507 43.3984V29.4984C46.2507 23.8284 44.8807 19.5484 42.1507 16.6484C39.4207 13.7484 35.2207 12.2984 29.5507 12.2984H22.3507V60.4984Z" fill="inherit"/>
+                    <path d="M65.6208 71.3984V1.39844H110.221V12.2984H77.7208V30.6984H107.421V41.5984H77.7208V60.4984H110.721V71.3984H65.6208Z" fill="inherit"/>
+                    <path d="M139.851 72.8C134.521 72.8 129.801 71.85 125.701 69.95C121.601 68.05 118.381 65.3 116.051 61.7C113.721 58.1 112.551 53.7 112.551 48.5V45.9H124.451V48.5C124.451 53.1 125.851 56.54 128.651 58.8C131.451 61.07 135.181 62.2 139.851 62.2C144.521 62.2 148.151 61.23 150.551 59.3C152.951 57.37 154.151 54.87 154.151 51.8C154.151 49.73 153.581 48.05 152.451 46.75C151.321 45.45 149.671 44.4 147.501 43.6C145.331 42.8 142.721 42.03 139.651 41.3L136.651 40.7C132.051 39.63 128.071 38.28 124.701 36.65C121.331 35.02 118.751 32.9 116.951 30.3C115.151 27.7 114.251 24.3 114.251 20.1C114.251 15.9 115.251 12.3 117.251 9.3C119.251 6.3 122.081 4 125.751 2.4C129.421 0.8 133.721 0 138.651 0C143.581 0 147.981 0.83 151.851 2.5C155.721 4.17 158.771 6.67 161.001 10C163.231 13.33 164.351 17.5 164.351 22.5V25.8H152.451V22.5C152.451 19.63 151.881 17.33 150.751 15.6C149.621 13.87 148.021 12.6 145.951 11.8C143.881 11 141.451 10.6 138.651 10.6C134.521 10.6 131.381 11.4 129.251 13C127.121 14.6 126.051 16.87 126.051 19.8C126.051 21.67 126.531 23.25 127.501 24.55C128.471 25.85 129.901 26.92 131.801 27.75C133.701 28.58 136.081 29.3 138.951 29.9L141.951 30.6C146.751 31.67 150.951 33.02 154.551 34.65C158.151 36.28 160.971 38.43 163.001 41.1C165.031 43.77 166.051 47.23 166.051 51.5C166.051 55.77 164.971 59.4 162.801 62.6C160.631 65.8 157.601 68.3 153.701 70.1C149.801 71.9 145.181 72.8 139.851 72.8Z" fill="inherit"/>
+                    <path d="M172.261 71.3984V1.39844H184.361V71.3984H172.261Z" fill="inherit"/>
+                    <path d="M218.421 72.8C213.491 72.8 209.071 71.72 205.171 69.55C201.271 67.38 198.171 64.22 195.871 60.05C193.571 55.88 192.421 50.77 192.421 44.7V28.1C192.421 19.03 194.951 12.08 200.021 7.25C205.091 2.42 211.891 0 220.421 0C228.951 0 235.521 2.29 240.121 6.85C244.721 11.42 247.021 17.57 247.021 25.3V25.7H235.221V24.9C235.221 22.23 234.691 19.83 233.621 17.7C232.551 15.57 230.921 13.88 228.721 12.65C226.521 11.42 223.751 10.8 220.421 10.8C215.491 10.8 211.601 12.32 208.771 15.35C205.941 18.38 204.521 22.57 204.521 27.9V44.9C204.521 50.17 205.941 54.37 208.771 57.5C211.601 60.63 215.551 62.2 220.621 62.2C225.691 62.2 229.391 60.83 231.721 58.1C234.051 55.37 235.221 51.87 235.221 47.6V46.4H217.521V36.2H247.021V71.4H236.021V64.5H234.321C233.791 65.7 232.951 66.95 231.821 68.25C230.691 69.55 229.071 70.63 226.971 71.5C224.871 72.37 222.021 72.8 218.421 72.8Z" fill="inherit"/>
+                    <path d="M255.731 71.3984V1.39844H278.731L295.231 63.2984H296.831V1.39844H308.731V71.3984H285.831L269.331 9.49844H267.631V71.3984H255.731Z" fill="inherit"/>
+                  </svg>
+                  <svg id="logotypeSvgWidthCenter" class="logotype--svg-center" width="478" height="73" viewBox="0 0 478 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0.0407715 71.3984L19.2408 1.39844H40.1408L59.3408 71.3984H46.9408L42.7408 55.3984H16.6408L12.4408 71.3984H0.0407715ZM19.4408 44.3984H39.9408L30.5408 8.89844H28.8408L19.4408 44.3984Z" fill="inherit"/>
+                    <path d="M65.1909 71.3984V1.39844H88.1909L104.691 63.2984H106.291V1.39844H118.191V71.3984H95.2909L78.7909 9.49844H77.0909V71.3984H65.1909Z" fill="inherit"/>
+                    <path d="M127.361 71.3984V1.39844H139.461V71.3984H127.361Z" fill="inherit"/>
+                    <path d="M148.581 71.3984V1.39844H171.081L184.681 63.2984H186.381L200.081 1.39844H222.481V71.3984H210.881V10.0984H209.181L195.581 71.3984H175.581L161.981 10.0984H160.281V71.3984H148.581Z" fill="inherit"/>
+                    <path d="M228.481 71.3984L247.681 1.39844H268.581L287.781 71.3984H275.381L271.181 55.3984H245.081L240.881 71.3984H228.481ZM247.881 44.3984H268.381L258.981 8.89844H257.281L247.881 44.3984Z" fill="inherit"/>
+                    <path d="M301.991 71.3984V12.2984H281.091V1.39844H334.891V12.2984H313.991V71.3984H301.991Z" fill="inherit"/>
+                    <path d="M341.241 71.3984V1.39844H353.341V71.3984H341.241Z" fill="inherit"/>
+                    <path d="M388.441 72.8C379.771 72.8 372.861 70.38 367.691 65.55C362.521 60.72 359.941 53.77 359.941 44.7V28.1C359.941 19.03 362.521 12.08 367.691 7.25C372.861 2.42 379.771 0 388.441 0C397.111 0 404.111 2.42 409.241 7.25C414.371 12.08 416.941 19.04 416.941 28.1V44.7C416.941 53.77 414.371 60.72 409.241 65.55C404.111 70.38 397.171 72.8 388.441 72.8ZM388.441 62C393.641 62 397.691 60.48 400.591 57.45C403.491 54.42 404.941 50.3 404.941 45.1V27.7C404.941 22.5 403.491 18.38 400.591 15.35C397.691 12.32 393.641 10.8 388.441 10.8C383.241 10.8 379.291 12.32 376.391 15.35C373.491 18.38 372.041 22.5 372.041 27.7V45.1C372.041 50.3 373.491 54.42 376.391 57.45C379.291 60.48 383.311 62 388.441 62Z" fill="inherit"/>
+                    <path d="M424.731 71.3984V1.39844H447.731L464.231 63.2984H465.831V1.39844H477.731V71.3984H454.831L438.331 9.49844H436.631V71.3984H424.731Z" fill="inherit"/>
+                  </svg>
+                  <svg id="logotypeSvgWidthBottom" class="logotype--svg-bottom" width="232" height="73" viewBox="0 0 232 73" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M28.6208 72.8C20.0908 72.8 13.2908 70.38 8.22085 65.55C3.15085 60.72 0.62085 53.77 0.62085 44.7V28.1C0.62085 19.04 3.15085 12.08 8.22085 7.25C13.2908 2.42 20.0908 0 28.6208 0C37.1508 0 43.7408 2.33 48.3708 7C53.0008 11.67 55.3209 18.07 55.3209 26.2V26.8H43.5209V25.9C43.5209 21.5 42.3008 17.88 39.8708 15.05C37.4408 12.22 33.6908 10.8 28.6208 10.8C23.5508 10.8 19.8008 12.32 16.9708 15.35C14.1409 18.38 12.7208 22.57 12.7208 27.9V44.9C12.7208 50.17 14.1409 54.33 16.9708 57.4C19.8008 60.47 23.6908 62 28.6208 62C33.5508 62 37.4408 60.58 39.8708 57.75C42.3008 54.92 43.5209 51.3 43.5209 46.9V45.2H55.3209V46.6C55.3209 54.73 53.0008 61.13 48.3708 65.8C43.7408 70.47 37.1508 72.8 28.6208 72.8Z" fill="inherit"/>
+                    <path d="M90.1008 72.8C81.4308 72.8 74.5208 70.38 69.3508 65.55C64.1808 60.72 61.6008 53.77 61.6008 44.7V28.1C61.6008 19.03 64.1808 12.08 69.3508 7.25C74.5208 2.42 81.4308 0 90.1008 0C98.7708 0 105.771 2.42 110.901 7.25C116.031 12.08 118.601 19.04 118.601 28.1V44.7C118.601 53.77 116.031 60.72 110.901 65.55C105.771 70.38 98.8308 72.8 90.1008 72.8ZM90.1008 62C95.3008 62 99.3508 60.48 102.251 57.45C105.151 54.42 106.601 50.3 106.601 45.1V27.7C106.601 22.5 105.151 18.38 102.251 15.35C99.3508 12.32 95.3008 10.8 90.1008 10.8C84.9008 10.8 80.9508 12.32 78.0508 15.35C75.1508 18.38 73.7008 22.5 73.7008 27.7V45.1C73.7008 50.3 75.1508 54.42 78.0508 57.45C80.9508 60.48 84.9708 62 90.1008 62Z" fill="inherit"/>
+                    <path d="M122.061 71.3984V60.7984H131.461V11.9984H122.061V1.39844H150.561C159.891 1.39844 167.031 3.76844 171.961 8.49844C176.891 13.2284 179.361 20.3284 179.361 29.7984V42.9984C179.361 52.4684 176.891 59.5684 171.961 64.2984C167.031 69.0284 159.891 71.3984 150.561 71.3984H122.061ZM143.461 60.4984H150.661C156.331 60.4984 160.531 59.0384 163.261 56.0984C165.991 53.1684 167.361 48.9284 167.361 43.3984V29.4984C167.361 23.8284 165.991 19.5484 163.261 16.6484C160.531 13.7484 156.331 12.2984 150.661 12.2984H143.461V60.4984Z" fill="inherit"/>
+                    <path d="M186.731 71.3984V1.39844H231.831V12.2984H198.831V30.6984H231.831V41.5984H198.831V60.4984H231.831V71.3984H186.731Z" fill="inherit"/>
+                  </svg>                    
+                </div>
+              </div>
+            </div>
+          </section>
+          <footer id="footer--container" class="footer--container">
+            <div class="footer--content">
+              <div class="footer--col-1">
+                <ul id="formTriggerThree" class="container-maintenance--ul cursor-pointer">
+                  <li class="footer--info-li uppercase">CONTACT</li>
+                  <li class="footer--info-link">Send me a message</li>
+                </ul>
+                <ul class="container-maintenance--ul">
+                  <li class="footer--info-li uppercase">email</li>
+                  <li class="footer--info-link"><a href="mailto:chris@chrisedwardsdesign.com" title="Email">chris@chrisedwardsdesign.com</a></li>
+                </ul>
+              </div>
+              <div class="footer--col-2">
+                <ul class="container-maintenance--ul">
+                  <li class="footer--info-li uppercase">LINKEDIN</li>
+                  <li class="footer--info-link"><a href="https://www.linkedin.com/in/chris-edwards-b97488276" title="LinkedIn External Link" target="_blank">/chris-edwards-b97488276</a></li>
+                </ul>
+                <ul class="container-maintenance--ul">
+                  <li class="footer--info-li uppercase">RESUME</li>
+                  <li class="footer--info-link"><a href="#" title="Download attached file" target="_blank">Download CV / Resume</a></li>
+                </ul>
+              </div>
+                <p class="footer--info-li--copyright-desk cursor-pointer"><a href="/license.txt" title="License">© Copyright 2023 Chris Edwards Design</a></p>
 
+                <p class="maintenance--version-history">* Under maintenance</p>
+                <div class="maintenance--version-container">
+                <p class="footer--info-li--copyright-mob cursor-pointer"><a href="/license.txt" title="License">© Copyright 2023 Chris Edwards Design</a></p>
+            </div>
+          </footer>
+        </div>
+      </div>
+    </main>
 </body>
 </html>
