--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <p id="copyrightLink" class="footer--info-li--copyright-desk cursor-pointer"><a href="/license.txt" title="License">© Copyright 2023 Chris Edwards Design</a></p>
                 <a id="creditsLink" href="/credits.txt" class="maintenance--version-history credits-link">Acknowledgements</a>
                 <div class="maintenance--version-container">
-                <p class="footer--info-li--copyright-mob cursor-pointer"><a href="/license.txt" title="License">© Copyright 2023 Chris Edwards Design</a></p>
+                <p id="copyrightLinkMob" class="footer--info-li--copyright-mob cursor-pointer"><a href="/license.txt" title="License">© Copyright 2023 Chris Edwards Design</a></p>
             </div>
           </footer>
         </div>
