--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!-- credits popup -->
   <section id="creditsContent" class="credits-content">
     <div id="creditsMessageToggle" class="credits-title--container">
-      <p class="">Copyright:</p>
+      <p class="">Acknowledgements:</p>
       <svg id="creditsMessageOpen" class="maintenance--svg-close-minus svg-hide" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
         <path d="M17 17L1 1" stroke="inherit"/>
         <path d="M1 17L17 1" stroke="inherit"/>
@@ -150,7 +150,7 @@
       <p class="credits-details">Hosted on GitHub Pages. Thank you for visiting and exploring my website.</p>
     </div>
     <p class="credits-title">Credits:</p>
-    <ul class="credits-list--container">
+    <!-- <ul class="credits-list--container">
       <li>Zari,</li>
       <li>Al,</li>
       <li>Mickey,</li>
@@ -163,7 +163,7 @@
       <li>Ann,</li>
       <li>Alan,</li>
       <li>Faye</li>
-    </ul>
+    </ul> -->
     <div class="credits-message--container">
       <p class="credits-message">Special thanks to all my close friends and family for your constant support.</p>
     </div>
@@ -197,7 +197,7 @@
               <!-- intro text mob -->
               <div class="column--content-text--desktop">
                 <p class="intro-text-desktop">
-                  Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript, Shopify liquid as well as 3D modeling packages Cinema 4D and blender. Check out my portfolio and reach out for freelance opportunities.
+                  Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio and reach out for freelance opportunities.
                 </p>
                 <a href="#" class="link--main-2 uppercase">
                   <svg class="link--main-svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -254,7 +254,7 @@
                 <div class="logotype--svg-inner">
                   <div class="intro-text--container-mob">
                     <p class="intro-text-mob">
-                      Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript, Shopify liquid as well as 3D modeling packages Cinema 4D and blender. Check out my portfolio and reach out for freelance opportunities.
+                      Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio and reach out for freelance opportunities.
                     </p>
                     <div class="intro-list--container-2">
                       <ul class="intro-list--row-1">
