--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- desktop menu -->
     <!-- nav logo -->
     <nav id="navBar" class="container--nav">
-      <div id="logoAbout" class="nav--logo-container cursor-pointer ">  
+      <div id="aboutTriggerLogoHome" class="nav--logo-container cursor-pointer ">  
         <a class="nav--logotype-container" href="#" title="Homepage">
           <h1 class="nav--logotype">CHRIS EDWARDS</h1>
           <div class="nav--logo-line"></div>
@@ -162,33 +162,6 @@
           </div>
           <div class="accordion-item">
             <div class="accordion-header">
-              <h3 class="accordion-title">CV / RÉSUMÉ</h3>
-              <!-- <button class="accordion-toggle"></button> -->
-              <svg id="" class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
-              </svg>        
-              <svg id="" class="nav--menu-svg-close-2 svg-hide accordion-toggle-two accordion-item-svg-close" width="18" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 1.44922H16" stroke="inherit"/>
-              </svg>
-            </div>
-            <div class="accordion-content">
-              <div class="mobile-menu--cv">
-                <p class="border-bottom-unset">Say hello, let's work together.</p>
-                <p class="">Manchester-based digital designer specialising in web design, animation and UX.</p>
-                <a href="#" class="contact-form--intro--cv-link" title="Download attached file">
-                <span class="uppercase">Download CV / Resume</span>
-                <span class="contact-form--intro-container--svg">
-                  <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"></path>
-                  <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"></path>
-                </svg>
-                </span>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <div class="accordion-header">
               <h3 class="accordion-title">CONTACT</h3>
               <!-- <button class="accordion-toggle"></button> -->
               <svg id="" class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
@@ -210,7 +183,6 @@
                 </svg>
                 </span>
                 </a> -->
-
                 <form id="contact-form-menu" class="contact-form" action="https://formspree.io/f/mzbqwbol" method="POST">
                   <div class="contact-form--input contact-form--input-header-bg-scolor contact-form--marquee-container">
                     <div id="contact-form-menu" class="contact-form--marquee-container">
@@ -233,7 +205,33 @@
                     <button id="contact-form--submit-two" user-scalable="no" type="submit">SUBMIT</button>
                   </div>
                 </form>
-
+            </div>
+          </div>
+          <div id="accordionOpenDefaultResume" class="accordion-item">
+            <div class="accordion-header">
+              <h3 class="accordion-title">CV / RÉSUMÉ</h3>
+              <!-- <button class="accordion-toggle"></button> -->
+              <svg id="" class="nav--menu-svg-close accordion-toggle-one accordion-item-svg-open" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.686279 9.16797H18.6853M9.68579 0.167969L9.68579 18.167" stroke="#151714"/>
+              </svg>        
+              <svg id="" class="nav--menu-svg-close-2 svg-hide accordion-toggle-two accordion-item-svg-close" width="18" height="2" viewBox="0 0 16 2" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 1.44922H16" stroke="inherit"/>
+              </svg>
+            </div>
+            <div class="accordion-content">
+              <div class="mobile-menu--cv">
+                <p class="border-bottom-unset">Say hello, let's work together.</p>
+                <p class="">Manchester-based digital designer specialising in web design, animation and UX.</p>
+                <a href="#" class="contact-form--intro--cv-link" title="Download attached file">
+                <span class="uppercase">Download CV / Resume</span>
+                <span class="contact-form--intro-container--svg download-svg--container">
+                  <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"></path>
+                  <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"></path>
+                </svg>
+                </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
